Setup Getting Logged In User Info
added JRMDesktop.Library and configured GetLoggedInUserInfo to use token to get user information as LoggedInUserModel

--- a/JRMDataManager/Web.config
+++ b/JRMDataManager/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-JRMDataManager-20200204120219.mdf;Initial Catalog=aspnet-JRMDataManager-20200204120219;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="JRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=JRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
