Add proper Connection String lookup

--- a/JRMApi/appsettings.json
+++ b/JRMApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ApiAuthDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ApiAuthDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "JRMData": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=JRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
