Fix Tax Rate bug in API

--- a/JRMApi/appsettings.json
+++ b/JRMApi/appsettings.json
@@ -10,5 +10,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "taxRate":  8.75
+
 }
