Moved Secure Key to Configuration

--- a/JRMApi/appsettings.json
+++ b/JRMApi/appsettings.json
@@ -11,6 +11,8 @@
     }
   },
   "AllowedHosts": "*",
-  "taxRate":  8.75
+  "Secrets": {
+    "SecurityKey": "MySecretKeyIsSecretSoDoNotTell"
+  }
 
 }
